--- a/src/options/options.html
+++ b/src/options/options.html
@@ -591,7 +591,7 @@
           <ul>
             <li>
               <input type="checkbox" name="send_settings_usage" id="send_settings_usage">
-              <label for="send_settings_usage">Send informations about the settings I use in order to help Better TweetDeck's development.</label>
+              <label for="send_settings_usage">Send information about the settings I use in order to help Better TweetDeck's development.</label>
             </li>
           </ul>
 
