feat: add poll option

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -237,6 +237,10 @@
               <input type="checkbox" name="css.show_provider_indicator" id="show_provider_indicator">
               <label for="show_provider_indicator" data-lang="css_show_provider_indicator">Show thumbnails source on top of them</label>
             </li>
+            <li data-setting-name="show_poll_results">
+              <input type="checkbox" name="show_poll_results" id="show_poll_results">
+              <label for="show_poll_results" data-lang="show_poll_results">Show the "poll results" button</label>
+            </li>
             <li data-setting-name="edit_item">
               <input type="checkbox" name="edit_item" id="edit_item">
               <label for="edit_item" data-lang="edit_item" data-new-feat>Add an edit item in tweets' menu</label>
