fix weird mistake

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -184,10 +184,10 @@
               <input type="checkbox" name="flash_tweets.enabled" id="flash" data-ghost>
               <label for="flash" data-lang="flash_tweets">Make tweets flash in:</label>
               <ul data-setting-name="mentions">
-                <li>
+                <li data-setting-name="all">
                   <input disabled type="radio" name="flash_tweets.mode" id="mentions">
                   <label for="mentions" data-lang="flash_tweets_mentions">Mentions columns</label>
-                </li data-setting-name="all">
+                </li>
                 <li>
                   <input disabled type="radio" name="flash_tweets.mode" id="all">
                   <label for="all" data-lang="flash_tweets_all">In every columns</label>
