Update the description in the option page and update the related locale files.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -273,7 +273,7 @@
               <label for="download_filename_format" data-lang="download_filename_format" data-new-feat>Download file name format</label>
               <br />
               <small data-lang="download_filename_format_parameters">You can use the following variables:
-                <code>{{postedUser}} {{tweetId}} {{fileName}} {{fileExtension}}</code>
+                <code>{{postedUser}} {{tweetId}} {{fileName}} {{fileExtension}} {{year}} {{month}} {{day}} {{hours}} {{minutes}} {{seconds}}</code>
               </small>
             </li>
             <li data-setting-name="keep_hashtags">
