Add content warnings

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -384,6 +384,11 @@
               <input type="checkbox" name="make_search_columns_first" id="make_search_columns_first">
               <label for="make_search_columns_first" data-lang="make_search_columns_first" data-new-feat>Add search columns in front of first column</label>
             </li>
+            <li data-setting-name="content_warnings">
+              <input type="checkbox" name="content_warnings" id="content_warnings">
+              <label for="content_warnings" data-lang="content_warnings" data-new-feat>Show content warnings for appropriately marked tweets</label>
+              <small data-lang="content_warnings_hint">We'll check tweets for containing commonly used cw/tw/cn warnings to display these!</small>
+            </li>
             <li>
               <input type="checkbox" name="custom_columns_width.enabled" id="column_width" data-ghost>
               <label for="column_width" data-lang="custom_width_columns">Custom width for columns:</label>
