add "resize_big_images_on_paste" option.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -413,6 +413,10 @@
               <label for="uncollapse_columns_unpause" data-lang="uncollapse_columns_unpause" data-new-feat>When you uncollapse a column, it will unpause the feed it so that it automatically scrolls back to the top
                 instead of staying where you left it.</label>
             </li>
+            <li data-setting-name="resize_big_images_on_paste">
+              <input type="checkbox" name="resize_big_images_on_paste" id="resize_big_images_on_paste">
+              <label for="resize_big_images_on_paste" data-lang="resize_big_images_on_paste" data-new-feat>When you paste bigger image than 5MB from clipboard, it will resize automatically.</label>
+            </li>
             <li data-setting-name="btd_logo">
               <input type="checkbox" name="btd_logo" id="btd_logo">
               <label for="btd_logo" data-lang="btd_logo">Change TweetDeck's logo in the left bottom corner for Better TweetDeck's logo</label>
