--- a/src/options/options.html
+++ b/src/options/options.html
@@ -25,7 +25,7 @@
       <div class="nav-flex">
         <h3 class="sidebar-title" data-lang="settings">Settings</h3>
         <nav class="sidebar-nav">
-          <a href="#tweets" class="nav-item -selected" data-lang="sec_tweetsName">Tweets: name & time</a>
+          <a href="#tweetsName" class="nav-item -selected" data-lang="sec_tweetsName">Tweets: name & time</a>
           <a href="#tweetsDisplay" class="nav-item" data-lang="sec_tweetsDisplay">Tweets: display</a>
           <a href="#interface" class="nav-item" data-lang="sec_interface">Interface</a>
           <a href="#content" class="nav-item" data-lang="sec_content">Content</a>
@@ -51,7 +51,7 @@
       </div>
     </aside>
     <main class="content">
-      <section class="content-block" id="tweets">
+      <section class="content-block" id="tweetsName">
         <h2 class="section-title" data-lang="sec_tweetsName">Tweets: name & time</h2>
 
         <div class="settings-section">
